// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroPortfolio renders correctly with all props 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
}

.c10 {
  display: flex;
  gap: 1rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c17 {
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
  height: 100%;
}

.c11 {
  color: var(--color-highlight);
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c11:hover {
  color: var(--color-tertiary);
}

.c11:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c8 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  min-height: 100svh;
  display: flex;
  align-items: center;
  padding: 5rem 0;
}

.c3 {
  flex-direction: column-reverse;
  gap: 3rem;
  align-items: center;
}

.c4 {
  flex: 1;
  text-align: center;
}

.c5 {
  font-size: 0.75rem;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  color: var(--color-paragraph);
  margin: 0 0 1rem;
}

.c6 {
  margin: 0 0 1rem;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  color: var(--color-highlight);
  line-height: 1.2;
  margin: 0 0 1.5rem;
}

.c9 {
  max-width: 500px;
  margin: 0 auto 2rem;
  line-height: 1.6;
}

.c12 {
  display: inline-block;
  padding: 0.875rem 2rem;
  background: var(--color-button);
  color: var(--color-button-text);
  font-weight: 700;
  font-size: 1rem;
  border: 2px solid transparent;
  border-radius: 4px;
  text-decoration: none;
  transition: all 0.2s ease;
}

.c12:hover {
  background: transparent;
  border-color: var(--color-highlight);
  color: var(--color-highlight);
}

.c12:focus-visible {
  outline: 2px solid var(--color-headline);
  outline-offset: 3px;
}

.c14 {
  display: inline-flex;
  align-items: center;
  gap: 0.375rem;
  padding: 0.875rem 0;
  color: var(--color-paragraph);
  font-size: 0.875rem;
  font-weight: 700;
  text-decoration: none;
  border-bottom: 1px solid var(--color-paragraph);
  transition: color 0.2s ease,border-color 0.2s ease;
}

.c14:hover {
  color: var(--color-headline);
  border-color: var(--color-headline);
}

.c14:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c13 {
  display: inline-block;
  padding: 0.875rem 2rem;
  border: 2px solid var(--color-highlight);
  color: var(--color-highlight);
  font-weight: 700;
  font-size: 1rem;
  border-radius: 4px;
  text-decoration: none;
  transition: all 0.2s ease;
}

.c13:hover {
  background: var(--color-highlight);
  color: var(--color-button-text);
}

.c13:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c15 {
  position: relative;
  flex-shrink: 0;
}

.c16 {
  position: relative;
  width: 240px;
  height: 240px;
  border-radius: 50%;
  overflow: hidden;
  border: 3px solid transparent;
  background: var(--color-background) padding-box,linear-gradient(135deg, var(--color-ring-start), var(--color-ring-end)) border-box;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c10 {
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1536px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1200px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width: 1200px) {
  .c3 {
    flex-direction: row;
    justify-content: space-between;
    gap: 4rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    text-align: left;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2rem;
  }
}

@media (min-width: 1200px) {
  .c9 {
    margin: 0 0 2rem;
  }
}

@media (min-width: 1200px) {
  .c16 {
    width: 380px;
    height: 380px;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
          >
            Hi, I'm
          </p>
          <h1
            class="c6"
          >
            Andrea Agostini
          </h1>
          <p
            class="c7"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c8 c9"
          >
            Building headless ecommerce and design systems with Next.js, React, TypeScript and Shopify. Based in Bangkok, fully remote.
          </p>
          <div
            class="c10"
          >
            <a
              class="c11 c12"
              href="#projects"
            >
              View Projects
            </a>
            <a
              class="c11 c13"
              href="mailto:a.agostini92@gmail.com"
            >
              Get in touch
            </a>
            <a
              aria-label="Download CV"
              class="c14"
              href="https://assets.ctfassets.net/placeholder/cv.pdf"
              rel="noopener noreferrer"
              target="_blank"
            >
              ↓ 
              Download CV
            </a>
          </div>
        </div>
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <figure
              class="c17"
            >
              <img
                alt="Andrea Agostini"
                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop"
                style="object-fit: cover;"
              />
            </figure>
          </div>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`HeroPortfolio renders correctly without secondary CTA 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
}

.c10 {
  display: flex;
  gap: 1rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c16 {
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
  height: 100%;
}

.c11 {
  color: var(--color-highlight);
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c11:hover {
  color: var(--color-tertiary);
}

.c11:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c8 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  min-height: 100svh;
  display: flex;
  align-items: center;
  padding: 5rem 0;
}

.c3 {
  flex-direction: column-reverse;
  gap: 3rem;
  align-items: center;
}

.c4 {
  flex: 1;
  text-align: center;
}

.c5 {
  font-size: 0.75rem;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  color: var(--color-paragraph);
  margin: 0 0 1rem;
}

.c6 {
  margin: 0 0 1rem;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  color: var(--color-highlight);
  line-height: 1.2;
  margin: 0 0 1.5rem;
}

.c9 {
  max-width: 500px;
  margin: 0 auto 2rem;
  line-height: 1.6;
}

.c12 {
  display: inline-block;
  padding: 0.875rem 2rem;
  background: var(--color-button);
  color: var(--color-button-text);
  font-weight: 700;
  font-size: 1rem;
  border: 2px solid transparent;
  border-radius: 4px;
  text-decoration: none;
  transition: all 0.2s ease;
}

.c12:hover {
  background: transparent;
  border-color: var(--color-highlight);
  color: var(--color-highlight);
}

.c12:focus-visible {
  outline: 2px solid var(--color-headline);
  outline-offset: 3px;
}

.c13 {
  display: inline-flex;
  align-items: center;
  gap: 0.375rem;
  padding: 0.875rem 0;
  color: var(--color-paragraph);
  font-size: 0.875rem;
  font-weight: 700;
  text-decoration: none;
  border-bottom: 1px solid var(--color-paragraph);
  transition: color 0.2s ease,border-color 0.2s ease;
}

.c13:hover {
  color: var(--color-headline);
  border-color: var(--color-headline);
}

.c13:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c14 {
  position: relative;
  flex-shrink: 0;
}

.c15 {
  position: relative;
  width: 240px;
  height: 240px;
  border-radius: 50%;
  overflow: hidden;
  border: 3px solid transparent;
  background: var(--color-background) padding-box,linear-gradient(135deg, var(--color-ring-start), var(--color-ring-end)) border-box;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c10 {
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1536px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1200px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width: 1200px) {
  .c3 {
    flex-direction: row;
    justify-content: space-between;
    gap: 4rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    text-align: left;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2rem;
  }
}

@media (min-width: 1200px) {
  .c9 {
    margin: 0 0 2rem;
  }
}

@media (min-width: 1200px) {
  .c15 {
    width: 380px;
    height: 380px;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
          >
            Hi, I'm
          </p>
          <h1
            class="c6"
          >
            Andrea Agostini
          </h1>
          <p
            class="c7"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c8 c9"
          >
            Building headless ecommerce and design systems with Next.js, React, TypeScript and Shopify. Based in Bangkok, fully remote.
          </p>
          <div
            class="c10"
          >
            <a
              class="c11 c12"
              href="#projects"
            >
              View Projects
            </a>
            <a
              aria-label="Download CV"
              class="c13"
              href="https://assets.ctfassets.net/placeholder/cv.pdf"
              rel="noopener noreferrer"
              target="_blank"
            >
              ↓ 
              Download CV
            </a>
          </div>
        </div>
        <div
          class="c14"
        >
          <div
            class="c15"
          >
            <figure
              class="c16"
            >
              <img
                alt="Andrea Agostini"
                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop"
                style="object-fit: cover;"
              />
            </figure>
          </div>
        </div>
      </div>
    </section>
  </section>
</div>
`;
